--- a/src/market/operation-panel.html
+++ b/src/market/operation-panel.html
@@ -2,12 +2,50 @@
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="operation-panel" fit>
     <template>
+        <style is="custom-style" include="iron-flex iron-flex-alignment paper-material-styles"></style>
         <style include="shared-styles">
          :host {
             display: block;
+            --paper-tab-content-unselected: {
+                background-color: white;
+                color: var(--app-text-color-light);
+            }
+
+            --paper-tab-ink: transparent;
+            /*--paper-tabs-selection-bar-color: transparent;*/
+        }
+        /*  paper-tabs {
+            color: white;
+        }
+
+        paper-tab {
+            padding-right: 0;
+            padding-left: 0;
+        }*/
+
+        paper-tab[name="sell"] {
+            color: var(--app-red-color);
+        }
+
+        paper-tab[name="buy"] {
+            color: var(--app-green-color);
+        }
+
+        .container {
+            @apply --layout-horizontal;
         }
         </style>
-        operation-panel
+        <paper-tabs selected="{{sellOrBuy}}" attr-for-selected="name">
+            <paper-tab name="sell">Sell</paper-tab>
+            <paper-tab name="buy">Buy</paper-tab>
+        </paper-tabs>
+        <iron-pages selected="{{sellOrBuy}}" attr-for-selected="name">
+            <div name="sell" class="container">
+            </div>
+            <!-- ----- -->
+            <div name="buy" class="container">
+            </div>
+        </iron-pages>
     </template>
     <script>
     class OperationPanel extends Polymer.Element {
@@ -15,7 +53,10 @@
 
         static get properties() {
             return {
-
+                sellOrBuy: {
+                    type: String,
+                    value: "buy"
+                }
             };
         }
     }
