--- a/src/page-market.html
+++ b/src/page-market.html
@@ -13,7 +13,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="market/candlestick-chart.html">
 <link rel="import" href="market/depth-chart.html">
 <link rel="import" href="market/operation-panel.html">
-<link rel="import" href="market/order-book.html">
 <link rel="import" href="market/recent-fills.html">
 <link rel="import" href="market/recent-orders.html">
 <link rel="import" href="market/top-orders.html">
@@ -68,6 +67,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         paper-card[hide] {
             display: none;
         }
+
+        paper-card.operation-panel-container {
+            /*padding: 0;*/
+        }
         </style>
         <looper-page>
             <simple-toolbar slot="secondary-toolbar" title="Market" id="[[marketId()]]" back-link="#/markets"></simple-toolbar>
@@ -85,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     </div>
                     <paper-fab show$="[[fabShown]]" icon="gavel" id="fab" on-click="flip" elevation="1"></paper-fab>
                 </paper-card>
-                <paper-card hide$="[[fabShown]]">
+                <paper-card class="operation-panel-container" hide$="[[fabShown]]">
                     <operation-panel></operation-panel>
                 </paper-card>
                 <paper-card>
@@ -130,7 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 },
                 fabShown: {
                     type: Boolean,
-                    value: true
+                    value: false
                 }
             };
         }
