--- a/src/wallet/subpage-default.html
+++ b/src/wallet/subpage-default.html
@@ -2,6 +2,7 @@
 <dom-module id="subpage-default" fit>
     <template>
         <style include="shared-styles"></style>
+        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
         <style>
          :host {
             display: block;
@@ -36,23 +37,30 @@
         .sections>paper-card {
             padding: 0;
         }
+
+        .space{
+            padding-bottom: 20px;
+            padding-top: 30px;
+        }
+
+
         </style>
         <div class="sections">
             <paper-card nopadding heading="Generate New Wallet">
                 <div class="card-content">Looper gives you the ability to generate new wallets so you can store your ETH & Tokens yourself, not on an exchange. This process happens entirely in your browser. Looper is not a web wallet. We are a client-side interface that allows you to interact with the Ethereum blockchain. We never save, store, or transmit any sensitive information ever. Therefore, when you generate a new wallet, you are responsible for safely backing it up.</div>
-                <div class="card-actions">
-                    <paper-button on-click="generateClicked">Generate Ethereum Wallet</paper-button>
+                <div class=" input-wrapper horizontal layout center-justified space">
+                    <paper-button primary on-click="generateClicked">Generate Ethereum Wallet</paper-button>
                 </div>
             </paper-card>
             <paper-card transparent elevation=0>
-                <div class="horiziontal center layout">
+                <div class="horizontal center layout">
                     <div class="flex or">or</div>
                 </div>
             </paper-card>
-            <paper-card nopadding heading="Unlock Existing Wallet">
+            <paper-card nopadding heading="Unlock Existing Wallet" >
                 <div class="card-content">Some content</div>
-                <div class="card-actions">
-                    <paper-button on-click="unlockClicked">Unlock Keystore File (UTC / JSON)</paper-button>
+                <div class="input-wrapper horizontal layout center-justified space">
+                    <paper-button primary on-click="unlockClicked">Unlock Keystore File (UTC / JSON)</paper-button>
                 </div>
             </paper-card>
         </div>
