--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -7,46 +7,43 @@
             display: block;
         }
         </style>
+        <global-variable key="app-config" value="{{appConfig}}"></global-variable>
         <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/orderFills.json" handle-as="json" last-response="{{resp}}"></iron-ajax>
         <!-- The array is set as the <vaadin-grid>'s "items" property -->
         <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
             <vaadin-grid-column width="60px">
                 <template class="header">
-                    <div class="left-aligned">Time</div>
-                </template>
-                <template>
-                    <div class="left-aligned">
-                        <time-str seconds="[[item.ts]]"></time-str>
-                    </div>
-                </template>
-            </vaadin-grid-column>
-            <vaadin-grid-column width="20px">
-                <template class="header">Type</template>
-                <template><span style$="color:[[typeStyle(item.isBuy)]]"> [[getType(item.isBuy)]]</span></template>
-            </vaadin-grid-column>
-            <vaadin-grid-column width="40px">
-                <template class="header">Amount (LRC)</template>
-                <template>[[item.fillAmountS]]</template>
-            </vaadin-grid-column>
-            <vaadin-grid-column width="40px">
-                <template class="header">Price (LRC/ETH)</template>
-                <template>[[calPrice(item.fillAmountB,item.fillAmountS)]]</template>
-            </vaadin-grid-column>
-            <vaadin-grid-column width="40px">
-                <template class="header">Size (ETH)</template>
-                <template>[[item.fillAmountB]]</template>
-            </vaadin-grid-column>
-            <vaadin-grid-column>
-                <template class="header">
-                    <div class="left-aligned">Hash</div>
+                    <div class="left-aligned">[[hashTitle]]</div>
                 </template>
                 <template>
                     <div class="left-aligned">
                         <a href="#/fill">
                             <div class="long-hash">[[item.txHash]]</div>
                         </a>
+                    </div>
                 </template>
-                </div>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Amount</template>
+                <template><pretty-number v="[[item.fillAmountS]]" d=4 postfix="([[_findSymbol(item.tokenS)]])"></pretty-number></template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Price</template>
+                <template>
+                    <pretty-number v="[[calPrice(item.fillAmountB,item.fillAmountS)]]" d=4 postfix="([[_findSymbol(item.tokenS)]]/[[_findSymbol(item.tokenB)]])"></pretty-number>
+                </template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Size</template>
+                <template><pretty-number v="[[item.fillAmountB]]" d=4 postfix="([[_findSymbol(item.tokenB)]])"></pretty-number></template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Fee</template>
+                <template><pretty-number v="[[item.fee]]" d=4 postfix="([[_findSymbol(item.tokenB)]])"></pretty-number></template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="40px">
+                <template class="header">Index</template>
+                <template>[[item.ringIndex]]</template>
             </vaadin-grid-column>
         </vaadin-grid>
     </template>
@@ -56,20 +53,51 @@
             return 'recent-fills';
         }
 
+        /**
+         * hashTitle: hash column title
+         * market: lrc-eos
+         */
         static get properties() {
             return {
                 token: {
                     type: String,
                 },
-
+                hashTitle: {
+                    type: String
+                },
+                market: String
             };
+        }
+
+        ready(){
+            super.ready()
+            console.log("selected market:"+this.market)
+        }
+
+        _findTokenConfig(address) {
+            var tokens = this.appConfig.tokens;
+            for (var x in tokens) {
+                var token = tokens[x];
+                if (token.contract == address) {
+                    return token;
+                }
+            }
+        }
+
+        _findSymbol(address) {
+            var token = this._findTokenConfig(address);
+            if (token) {
+                return token.unit
+            } else {
+                return "?";
+            }
         }
 
         calPrice(b, s) {
             if (b && s && s !== 0) {
                 return (b / s);
             }
-            return 'Error';
+            return 0;
         }
         typeStyle(isBuy) {
 
