--- a/src/my-app.html
+++ b/src/my-app.html
@@ -85,7 +85,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="page-orders.html">
 <link rel="lazy-import" href="page-order.html">
 <link rel="lazy-import" href="page-fills.html">
-<link rel="lazy-import" href="page-fill.html">
 <link rel="lazy-import" href="page-wallet.html">
 <link rel="lazy-import" href="page-transfer">
 <link rel="lazy-import" href="page-authorize">
@@ -196,7 +195,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <signtosend-dialog id="signtosend"></signtosend-dialog>
         <notification-panel id="notification"></notification-panel>
         <!-- ajax -->
-        <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/config.json" handle-as="json" last-response="{{appConfig}}"></iron-ajax>
+        <iron-ajax auto url="http://127.0.0.1:8081/config.json" handle-as="json" last-response="{{appConfig}}"></iron-ajax>
         <!-- global vars -->
         <global-variable key="app-config" value="{{appConfig}}"></global-variable>
         <global-variable key="wallet" value="{{wallet}}"></global-variable>
@@ -241,8 +240,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <page-ring name="ring" id={{pageId}}></page-ring>
                     <page-orders name="orders"></page-orders>
                     <page-order name="order" id={{pageId}}></page-order>
-                    <page-fills name="fills"></page-fills>
-                    <page-fill name="fill" id={{pageId}}></page-fill>
+                    <page-fills name="fills" id={{pageId}}></page-fills>
                     <page-convert name="convert" id={{pageId}}></page-convert>
                     <page-authorize name="authorize" id={{pageId}}></page-authorize>
                     <page-transfer name="transfer"></page-transfer>
