--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -189,6 +189,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 width: 1024px;
             }
         }
+
+        div[part="input-field"]{
+            -moz-border-radius:0px;
+        }
         </style>
     </template>
 </dom-module>
