market hidden my-tab

--- a/src/market/top-orders.html
+++ b/src/market/top-orders.html
@@ -8,7 +8,7 @@
         }
 
         .seperator {
-            width: 40px;
+            width: 60px;
         }
 
          vaadin-grid {
@@ -19,41 +19,47 @@
         <!-- The array is set as the <vaadin-grid>'s "items" property -->
         <div class="horizontal layout">
             <div class="asks flex">
-                <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Amount</template>
-                        <template>[[numberFormat(item.orginalOrder.amountB)]] [[transtoUppercase(item.orginalOrder.tokenB)]]
-                        </template>
-                    </vaadin-grid-column>
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Price</template>
-                        <template>[[getPrice(item.orginalOrder.amountS,item.orginalOrder.amountB)]]</template>
-                    </vaadin-grid-column>
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Size</template>
-                        <template>[[numberFormat(item.orginalOrder.amountS)]] [[transtoUppercase(item.orginalOrder.tokenS)]]
-                        </template>
-                    </vaadin-grid-column>
-                </vaadin-grid>
+                <div class="horizontal center-justified layout"><h3>Buy</h3></div>
+                <div>
+                    <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Amount</template>
+                            <template>[[numberFormat(item.orginalOrder.amountB)]] [[transtoUppercase(item.orginalOrder.tokenB)]]
+                            </template>
+                        </vaadin-grid-column>
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Price</template>
+                            <template>[[getPrice(item.orginalOrder.amountS,item.orginalOrder.amountB)]]</template>
+                        </vaadin-grid-column>
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Size</template>
+                            <template>[[numberFormat(item.orginalOrder.amountS)]] [[transtoUppercase(item.orginalOrder.tokenS)]]
+                            </template>
+                        </vaadin-grid-column>
+                    </vaadin-grid>
+                </div>
             </div>
             <div class="seperator"></div>
             <div class="bids flex">
-                <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Amount</template>
-                        <template>[[numberFormat(item.orginalOrder.amountB)]] [[transtoUppercase(item.orginalOrder.tokenB)]]
-                        </template>
-                    </vaadin-grid-column>
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Price</template>
-                        <template>[[getPrice(item.orginalOrder.amountS,item.orginalOrder.amountB)]]</template>
-                    </vaadin-grid-column>
-                    <vaadin-grid-column width="50px">
-                        <template class="header">Size</template>
-                        <template>[[numberFormat(item.orginalOrder.amountS)]] [[transtoUppercase(item.orginalOrder.tokenS)]]
-                        </template>
-                    </vaadin-grid-column>
-                </vaadin-grid>
+                <div class="horizontal center-justified layout"><h3>Sell</h3></div>
+                <div>
+                    <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Amount</template>
+                            <template>[[numberFormat(item.orginalOrder.amountB)]] [[transtoUppercase(item.orginalOrder.tokenB)]]
+                            </template>
+                        </vaadin-grid-column>
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Price</template>
+                            <template>[[getPrice(item.orginalOrder.amountS,item.orginalOrder.amountB)]]</template>
+                        </vaadin-grid-column>
+                        <vaadin-grid-column width="50px">
+                            <template class="header">Size</template>
+                            <template>[[numberFormat(item.orginalOrder.amountS)]] [[transtoUppercase(item.orginalOrder.tokenS)]]
+                            </template>
+                        </vaadin-grid-column>
+                    </vaadin-grid>
+                </div>
             </div>
         </div>
     </template>
